fixed splash overflowing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -55,7 +55,7 @@ h2 {
     padding-top: 200px;
     padding-bottom: 100px;
     margin-left: -15px;
-    margin-right: -15px;
+    margin-right: 0px;
     background-image: url(images/splash.jpg);
     background-size: cover;
 }
